# zendriver-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  run.py  server.json
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: getting-started.md  index.md  releasing.md  tool-reference.md
docs/recipes/: beat-cloudflare.md  mock-api-responses.md  performance-audit.md  scrape-behind-login.md
scripts/: debug_ax.py  integration_smoke.py  mcp_smoke.py
src/: __init__.py  artifacts.py  compat.py  errors.py  humaninput.py  response.py  server.py  session.py
src/static/js/: dom_walker.js
src/tools/: __init__.py  _shadow_js.py  accessibility.py  base.py  browser.py  content.py  cookies.py  devtools.py  elements.py  emulation.py  forms.py  humanlike.py  interception.py  lighthouse.py  logging.py  navigation.py  network_control.py  permissions.py  proxy.py  query.py  screencast.py  stealth.py  storage.py  tabs.py  utils.py
tests/: conftest.py  test_accessibility_render.py  test_accessibility_uid_stability.py  test_artifacts_sandbox.py  test_cli.py  test_compat.py  test_cookies_roundtrip.py  test_emulation_profiles.py  test_escape_js.py  test_forms_press_key.py  test_humaninput.py  test_permissions.py  test_response.py  test_session_reset.py  test_smoke.py  test_timeouts.py
