[project]
name = "zendriver-mcp"
version = "0.1.0"
description = "MCP server for browser automation using Zendriver"
requires-python = ">=3.10"
dependencies = [
    "zendriver>=0.14.0",
    "mcp>=1.0.0",
    "Pillow",
]

[project.scripts]
zendriver-mcp = "src.server:main"

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
